Added contracts handler and tests and helper func to check stays from db
